# ChatGPT-Micro-Cap-Experiment

./: pyproject.toml  requirements.txt  simple_automation.py
Start Your Own/: chatgpt_portfolio_update.csv  llm_requests.jsonl  llm_responses.jsonl
