[project]
name = "chatgpt-micro-cap-experiment"
version = "0.1.0"
description = ""
authors = [
    {name = "moltra",email = "smsmail@roadrunner.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "openai (>=1.107.0,<2.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
